kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  selector:
    matchLabels:
      app: petclinic
  replicas: 1
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic
          image: library/spring-petclinic:3.1.0-SNAPSHOT
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: 4Gi
            requests:
              cpu: "1"
              memory: 4Gi
          args:
            - -cpus
            - "1"
          volumeMounts:
            - mountPath: /logs
              name: logs
        - name: fluent-bit
          image: fluent/fluent-bit:1.9.10
          volumeMounts:
            - mountPath: /logs
              name: logs
            - name: fluent-bit-conf
              mountPath: /fluent-bit/etc/fluent-bit.conf
              subPath: fluent-bit.conf
            - name: fluent-bit-conf
              mountPath: /fluent-bit/etc/parsers_java.conf
              subPath: parsers_java.conf

      volumes:
        - name: logs
          hostPath:
            path: /Users/icetusk/Projects/spring-petclinic/logs
        - name: fluent-bit-conf
          hostPath:
            path: /Users/icetusk/Projects/spring-petclinic/conf
            type: Directory
