kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: petclinic
spec:
  selector:
    app: petclinic
  ports:
    - name: http
      port: 8080
